# sinfourmis2025

./: .gitignore  CMakeLists.txt  Dockerfile  LICENCE  README.md
include/: pair_hash.hpp  salle_parser.hpp  sinfourmis.h
include/animation/: animation.hpp  ant_group_data.hpp
include/debugger/: debugger.hpp
include/game/: ant.hpp  constants.hpp  game.hpp  queen.hpp  team.hpp
include/interfaces/: dummy.hpp  interface.hpp  python.hpp  shared.hpp
include/map/: edge.hpp  map.hpp  neighbor_data.hpp  node.hpp  team.hpp
include/utils/: groups.hpp  salle_parser.hpp
interfaces/c/: fourmis.c
interfaces/cpp/: CMakeLists.txt  Makefile  fourmis.cpp  sinfourmis.h
interfaces/examples/c/: .gitignore  Makefile  fourmis.c
interfaces/examples/cpp/: .gitignore  fourmis.cpp
interfaces/examples/ocaml/: .gitignore  cstub.c  dune  dune-project  main.ml  sinfourmis.ml
interfaces/examples/python/: main.py
interfaces/examples/rust/: .gitignore  Cargo.toml
interfaces/examples/rust/src/: lib.rs
interfaces/ocaml/: .gitignore  Makefile  README.md  cstub.c  dune  dune-project  install.sh  sinfourmis.c  sinfourmis.ml
interfaces/python/: README.md  main.py
interfaces/rust/: Cargo.toml  README.md
interfaces/rust/src/: lib.rs
interfaces/tests/ocaml/: dune  dune-project
maps/: test.json
src/: main.cpp
src/animation/: animation.cpp
src/debugger/: debugger.cpp
src/game/: ant.cpp  game.cpp  queen.cpp
src/interfaces/: dummy.cpp  python.cpp  shared.cpp
src/map/: edge.cpp  map.cpp  node.cpp
src/utils/: groups.cpp
